--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 	<head>
-
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 
-		<title>Home V.1 - Rotors - Car Rental HTML5 Template</title>
+		<title>Oferta&maspty</title>
 		<link rel="shortcut icon" href="assets/images/logo/favourite_icon.png">
 
 		<!-- fraimwork - css include -->
